--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-usemin": "~2.1.1"
+    "grunt-usemin": "~2.1.1",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-rev": "~0.1.0",
+    "grunt-contrib-htmlmin": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "~0.7.1"
   },
   "author": "Lucho Yankov",
   "license": "MIT",
