--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "grunt-rev": "~0.1.0",
     "grunt-contrib-htmlmin": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.7.1"
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-sass": "~0.7.3"
   },
   "author": "Lucho Yankov",
   "license": "MIT",
