--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "jQuery": "~2.1.1",
     "moment": "~2.6.0",
     "simpleStorage": "~0.1.2",
-    "jquery-requestAnimationFrame": "~0.1.2"
+    "jquery-requestAnimationFrame": "~0.1.2",
+    "jquery-pjax": "~1.8.2",
+    "fastclick": "~1.0.2"
   },
   "devDependencies": {
   },
